# kai-mempalace

./: CHANGELOG.md  Dockerfile.alpine  README.md  __init__.py  cli.py  embedder.py  faiss_store.py  knowledge_graph.py  palace.py  pyproject.toml
kai_mempalace/: __init__.py  __main__.py  _stdio.py  cli.py  closet_llm.py  config.py  convo_miner.py  convo_scanner.py  corpus_origin.py  dedup.py  dialect.py  diary_ingest.py  dynamics.py  entity_detector.py  entity_registry.py  exporter.py  fact_checker.py  format_miner.py  general_extractor.py  hallways.py  hooks_cli.py  instructions_cli.py  layers.py  llm_client.py  llm_refine.py  mcp_server.py  migrate.py  miner.py  normalize.py  onboarding.py  palace.py  palace_graph.py  project_scanner.py  query_sanitizer.py  repair.py  repair_utils.py  room_detector_local.py  searcher.py  spellcheck.py  sweeper.py  (+2 more)
kai_mempalace/backends/: __init__.py  base.py  bert_embedder.py  embedder.py  faiss_backend.py  faiss_store.py  knowledge_graph.py  registry.py  types.py
kai_mempalace/data/: __init__.py
kai_mempalace/i18n/: __init__.py
kai_mempalace/sources/: __init__.py  base.py  context.py  registry.py  transforms.py
